--- a/frontend/css/student.css
+++ b/frontend/css/student.css
@@ -37,7 +37,7 @@ ul {
     height: 40px;
     width: 250px;
 }
- .classTextArea {
+ .questTextArea {
     margin: 10px;
     height: 50px;
     width: 300px;
